        Planner: fixed access to class list in Edit Unit when viewing past and upcoming years
        Rubrics: fixed the bug preventing to view ATL Rubrics table on mobile devices
        Staff: fixed coverage longer than one week not including staff duty and activity cover
        Staff: fixed order of Staff Directory to honour the biographicalGroupingOrder setting
        Timetable: fixed multiple instances of the same TT day in a week not showing up
        Timetable Admin: fixed missing Manage Exceptions button on the timetable in Course Enrolment by Person
        Timetable Admin: fixed the issue of setting white as the default color for both background and font
        Timetable Admin: fixed bug to allow timetable deletion
        User Admin: fixed uneditable fields for new Personal Documents in Manage Users

    Deprecations
        Removed all functions in functions.php flagged for deprecation since v25

v29.0.00
--------

    Headlines
        A new mobile-responsive Timetable UI with layer visibility toggles
        An improved library borrowing page in Student Profile with tabs and quick lending actions
        An option to add new recipients to existing messages in Messenger
        A color-coded Markbook option for easier visual identification
        A simple Petty Cash system in Finance for tracking small expenses

    Security
        System: added nonce and CSRF token handling to all POST forms

    Tweaks & Additions
        System: removed Date of Birth field from Public Registration when no minimum registration age is set
        System: improved the colour picker to add a pre-set colour palette
        System: added IDD country codes to all countries in the database
        System: added a log entry for resetting password through 'Forgot Password"
        System: updated jQuery UI library to v1.14.1
        Activities: added form group name next to student name in Activity Attendance list