@@ -85,6 +85,7 @@ v30.0.00
         Rubrics: fixed the bug preventing to view ATL Rubrics table on mobile devices
         Staff: fixed coverage longer than one week not including staff duty and activity cover
         Staff: fixed order of Staff Directory to honour the biographicalGroupingOrder setting
+        Staff: fixed missing staff name for general coverage in Daily Coverage Planner
         Timetable: fixed multiple instances of the same TT day in a week not showing up
         Timetable Admin: fixed missing Manage Exceptions button on the timetable in Course Enrolment by Person
         Timetable Admin: fixed the issue of setting white as the default color for both background and font
